kubescript/deployKube/oauth2_proxy/oauth2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - env:
          - name: OAUTH2_PROXY_PROVIDER
            value: azure
          - name: OAUTH2_PROXY_AZURE_TENANT
            value: d078dcb5-2ef5-423e-904f-71c9cb394d00
          - name: OAUTH2_PROXY_CLIENT_ID
            value: c0413522-8c8b-4823-a431-c78f3ebd25dc
          - name: OAUTH2_PROXY_CLIENT_SECRET
            value: BJ~__2o-BzI06fXutaxiZ3HnQLAol-YwV-
          - name: OAUTH2_PROXY_COOKIE_SECRET
            value: somethingveryran
          - name: OAUTH2_PROXY_HTTP_ADDRESS
            value: "0.0.0.0:4180"
          - name: OAUTH2_PROXY_UPSTREAM
            value: "https://myapp-ingress.southeastasia.cloudapp.azure.com/"
          - name: OAUTH2_PROXY_EMAIL_DOMAINS
            value: '*'
        image: quay.io/pusher/oauth2_proxy:latest
        imagePullPolicy: IfNotPresent
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
